--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "angular-auth-oidc-client": "^11.6.8",
     "moment": "^2.29.1",
     "rxjs": "~6.6.7",
+    "time-input-polyfill": "^1.0.10",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
