--- a/.github/workflows/update-browserlist.yml
+++ b/.github/workflows/update-browserlist.yml
@@ -2,7 +2,7 @@ name: Update supported browser list
 
 on:
     push:
-        branches: [feature/display-unsupported-browser]
+        branches: [master]
 
 jobs:
     update-supported-regex:
