--- a/.github/workflows/update-browserlist.yml
+++ b/.github/workflows/update-browserlist.yml
@@ -9,14 +9,14 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+            - uses: actions/setup-node@v1
             - name: Generate regex
-              uses: actions/setup-node@v1
             - run: npm ci
             - run: npx browserslist@latest --update-db
             - run: npm run supportedBrowsers
 
-            - name: Push regex
             - uses: actions/checkout@v2
+            - name: Push regex
               with:
                   ref: ${{ github.head_ref }}
             - run: |
