--- a/.github/workflows/update-browserlist.yml
+++ b/.github/workflows/update-browserlist.yml
@@ -9,8 +9,12 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: actions/setup-node@v1
+            - uses: actions/checkout@v2
+              with:
+                  ref: ${{ github.head_ref }}
+        
             - name: Generate regex
+            - uses: actions/setup-node@v1
             - run: npm ci
             - run: npx browserslist@latest --update-db
             - run: npm run supportedBrowsers
