--- a/.github/workflows/update-browserlist.yml
+++ b/.github/workflows/update-browserlist.yml
@@ -20,8 +20,8 @@ jobs:
             - run: npm run supportedBrowsers
             
             - name: Push regex file
-              uses: actions/checkout@v2
-            - run: git config --global user.name 'Yannik Inniger'
-            - run: git config --global user.email 'yannikinniger@users.noreply.github.com'
-            - run: git commit -am "Update regex for supported browsers"
-            - run: git push
+              run: | 
+                git config --global user.name 'Yannik Inniger' 
+                git config --global user.email 'yannikinniger@users.noreply.github.com'
+                git commit -am "Update regex for supported browsers"
+                git push
