--- a/.github/workflows/update-browserlist.yml
+++ b/.github/workflows/update-browserlist.yml
@@ -12,6 +12,7 @@ jobs:
             - uses: actions/checkout@v2
               with:
                   ref: ${{ github.head_ref }}
+                  repo-token: ${{ secrets.GITHUB_TOKEN }}
             
             - name: Generate regex
               uses: actions/setup-node@v1
