--- a/.browserslistrc
+++ b/.browserslistrc
@@ -5,10 +5,9 @@
 # You can see what browsers were selected by your queries by running:
 #   npx browserslist
 
-> 0.5%
-last 2 versions
-Firefox ESR
+last 2 Chrome versions
+last 2 Firefox versions
+last 2 safari versions
+last 2 Edge versions
 not safari < 14.1
 not dead
-not IE 11
-not IE 9-10 # For IE 9-11 support, remove 'not'.
