--- a/.github/workflows/update-browserlist.yml
+++ b/.github/workflows/update-browserlist.yml
@@ -12,14 +12,17 @@ jobs:
             - uses: actions/checkout@v2
               with:
                   ref: ${{ github.head_ref }}
-
+                  repo-token: ${{ secrets.GITHUB_TOKEN }}
+            
             - name: Generate regex
               uses: actions/setup-node@v1
             - run: npm ci
             - run: npx browserslist@latest --update-db
             - run: npm run supportedBrowsers
-
-            - uses: stefanzweifel/git-auto-commit-action@v4
-              with:
-                  file_pattern: src/app/supportedBrowsers.ts
-                  commit_message: Update supported browsers regex
+            
+            - name: Push regex file
+              run: | 
+                git config --global user.name 'Yannik Inniger' 
+                git config --global user.email 'yannikinniger@users.noreply.github.com'
+                git commit -am "Update regex for supported browsers"
+                git push
