--- a/.github/workflows/update-browserlist.yml
+++ b/.github/workflows/update-browserlist.yml
@@ -2,7 +2,7 @@ name: Update supported browser list
 
 on:
     push:
-        branches: [develop]
+        branches: [develop-temp]
 
 jobs:
     update-supported-regex:
@@ -13,16 +13,16 @@ jobs:
               with:
                   ref: ${{ github.head_ref }}
                   repo-token: ${{ secrets.GITHUB_TOKEN }}
-            
+
             - name: Generate regex
               uses: actions/setup-node@v1
             - run: npm ci
             - run: npx browserslist@latest --update-db
             - run: npm run supportedBrowsers
-            
+
             - name: Push regex file
-              run: | 
-                git config --global user.name 'Yannik Inniger' 
+              run: |
+                git config --global user.name 'Yannik Inniger'
                 git config --global user.email 'yannikinniger@users.noreply.github.com'
                 git commit -am "Update regex for supported browsers"
                 git push
