--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,7 +15,7 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [12.x, 14.x, 16.8]
+                node-version: [14.x, 16.8]
 
         steps:
             - uses: actions/checkout@v2
