--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,10 +4,17 @@
 name: Node.js CI
 
 on:
+    workflow_dispatch:
     push:
-        branches: [master]
+        branches:
+          - 'release/**'
+          - 'master'
+        tags:        
+          - '*.*.*'
     pull_request:
-        branches: [master, develop]
+        branches:
+          - 'release/**'
+          - 'master'
 
 jobs:
     build:
