--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,6 +11,10 @@ on:
           - 'master'
         tags:        
           - '*.*.*'
+    pull_request:
+        branches:
+          - 'feature/**'
+          - 'bugfix/**'
 
 jobs:
     build:
