--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "ng lint",
     "format": "npm run lint -- --fix && node_modules/prettier/bin-prettier.js --write 'src/**/{*.ts,*.html}'",
     "release": "node scripts/release.js",
-    "prerelease": "npm run lint && npm test -- --prod && npm run build -- --prod",
+    "prerelease": "npm run lint && npm test -- --configuration production && npm run build -- --configuration production",
     "supportedBrowsers": "echo \"export const supportedBrowsers = $(browserslist-useragent-regexp --allowHigherVersions);\" > ./src/app/supportedBrowsers.ts"
   },
   "private": true,
@@ -24,18 +24,18 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "^11.2.13",
+    "@angular/animations": "^12.2.16",
     "@angular/cdk": "^11.2.12",
-    "@angular/common": "^11.2.13",
-    "@angular/compiler": "^11.2.13",
-    "@angular/core": "^11.2.13",
-    "@angular/forms": "^11.2.13",
-    "@angular/localize": "^11.2.13",
+    "@angular/common": "^12.2.16",
+    "@angular/compiler": "^12.2.16",
+    "@angular/core": "^12.2.16",
+    "@angular/forms": "^12.2.16",
+    "@angular/localize": "^12.2.16",
     "@angular/material": "^11.2.12",
     "@angular/material-moment-adapter": "^11.2.12",
-    "@angular/platform-browser": "^11.2.13",
-    "@angular/platform-browser-dynamic": "^11.2.13",
-    "@angular/router": "^11.2.13",
+    "@angular/platform-browser": "^12.2.16",
+    "@angular/platform-browser-dynamic": "^12.2.16",
+    "@angular/router": "^12.2.16",
     "@ngx-translate/core": "^13.0.0",
     "@oblique/oblique": "^6.1.5",
     "@popperjs/core": "^2.9.2",
@@ -44,19 +44,19 @@
     "rxjs": "~6.6.7",
     "time-input-polyfill": "^1.0.10",
     "tslib": "^2.3.1",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-builders/jest": "^9.0.1",
-    "@angular-devkit/build-angular": "^0.1102.14",
+    "@angular-devkit/build-angular": "^12.2.18",
     "@angular-eslint/builder": "4.2.0",
     "@angular-eslint/eslint-plugin": "4.2.0",
     "@angular-eslint/eslint-plugin-template": "4.2.0",
     "@angular-eslint/schematics": "4.2.0",
     "@angular-eslint/template-parser": "4.2.0",
-    "@angular/cli": "^11.2.14",
-    "@angular/compiler-cli": "^11.2.13",
-    "@angular/language-service": "^11.2.13",
+    "@angular/cli": "^12.2.18",
+    "@angular/compiler-cli": "^12.2.16",
+    "@angular/language-service": "^12.2.16",
     "@types/jest": "^26.0.23",
     "@types/node": "^13.13.51",
     "@typescript-eslint/eslint-plugin": "4.16.1",
@@ -74,6 +74,6 @@
     "ts-node": "^8.10.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.3.0",
-    "typescript": "~4.0.7"
+    "typescript": "~4.3.5"
   }
 }
