updated oblique from v7 to v8

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,23 +1,14 @@
 {
 	"overrides": [
-		{
-			"files": "*.ts",
-			"options": {
-				"semi": true,
-				"singleQuote": true,
-				"bracketSpacing": false,
-				"useTabs": true,
-				"trailingComma": "none",
-				"arrowParens": "avoid",
-				"printWidth": 120
-			}
-		},
-		{
-			"files": "*.html",
-			"options": {
-				"parser": "angular",
-				"printWidth": 120
-			}
+	  {
+		"files": "*.ts",
+		"options": {
+			"semi": true,
+			"singleQuote": true,
+			"bracketSpacing": false,
+			"trailingComma": "none",
+			"arrowParens": "avoid"
 		}
+	  }
 	]
 }
