--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "format": "npm run lint -- --fix && node_modules/prettier/bin-prettier.js --write 'src/**/{*.ts,*.html}'",
     "release": "node scripts/release.js",
     "prerelease": "npm run lint && npm test -- --configuration production && npm run build -- --configuration production",
-    "supportedBrowsers": "echo \"export const supportedBrowsers = $(browserslist-useragent-regexp --allowHigherVersions);\" > ./src/app/supportedBrowsers.ts"
+    "supportedBrowsers": "echo \"export const supportedBrowsers = $(browserslist-useragent-regexp --allowHigherVersions);\" > ./src/app/supportedBrowsers.ts",
+    "lint": "ng lint",
+    "format": "npm run lint -- --fix"
   },
   "private": true,
   "jestSonar": {
@@ -36,8 +36,8 @@
     "@angular/platform-browser": "^13.3.11",
     "@angular/platform-browser-dynamic": "^13.3.11",
     "@angular/router": "^13.3.11",
-    "@ngx-translate/core": "^13.0.0",
-    "@oblique/oblique": "^7.1.2",
+    "@ngx-translate/core": "^14.0.0",
+    "@oblique/oblique": "^8.2.4",
     "@popperjs/core": "^2.9.2",
     "angular-auth-oidc-client": "^11.6.8",
     "moment": "^2.29.1",
@@ -49,31 +49,27 @@
   "devDependencies": {
     "@angular-builders/jest": "^9.0.1",
     "@angular-devkit/build-angular": "^13.3.9",
-    "@angular-eslint/builder": "4.2.0",
-    "@angular-eslint/eslint-plugin": "4.2.0",
-    "@angular-eslint/eslint-plugin-template": "4.2.0",
-    "@angular-eslint/schematics": "4.2.0",
-    "@angular-eslint/template-parser": "4.2.0",
+    "@angular-eslint/builder": "13.5.0",
+    "@angular-eslint/eslint-plugin": "13.5.0",
+    "@angular-eslint/eslint-plugin-template": "13.5.0",
+    "@angular-eslint/schematics": "13.5.0",
+    "@angular-eslint/template-parser": "13.5.0",
     "@angular/cli": "^13.3.9",
     "@angular/compiler-cli": "^13.3.11",
     "@angular/language-service": "^13.3.11",
     "@types/jest": "^26.0.23",
     "@types/node": "^13.13.51",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
     "browserslist-useragent-regexp": "^3.0.0",
-    "eslint": "^7.28.0",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-jsdoc": "latest",
-    "eslint-plugin-prefer-arrow": "latest",
-    "eslint-plugin-react": "latest",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "jest-sonar-reporter": "^2.0.0",
     "prettier": "^2.3.1",
     "ts-node": "^8.10.2",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "~4.6.4"
   }
 }
