--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,18 @@
-# Editor configuration, see https://editorconfig.org
+# Editor configuration, see http://editorconfig.org
 root = true
 
 [*]
 charset = utf-8
-indent_style = tab
-indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
-
-[*.ts]
-quote_type = single
-
-[*.md]
-indent_style = space
-trim_trailing_whitespace = false
+indent_style = tab
+max_line_length = 160
+end_of_line = lf
 
 [*.json]
 indent_style = space
 indent_size = 2
+
+[*.md]
+max_line_length = off
+trim_trailing_whitespace = false
