fixed breaking changes, mostly for angular-auth-oidc-client, but also some others; ng test not working yet

--- a/angular.json
+++ b/angular.json
@@ -57,6 +57,11 @@
               "node_modules/@oblique/oblique/styles/css/frutiger.css",
               "src/styles/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "./node_modules"
+              ]
+            },
             "scripts": [
               "node_modules/@oblique/oblique/ob-features.js"
             ],
