--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@oblique/oblique": "^9.3.0",
     "@popperjs/core": "^2.9.2",
     "angular-auth-oidc-client": "^14.1.5",
+    "core-js": "^3.26.0",
     "moment": "^2.29.1",
     "rxjs": "~7.5.7",
     "time-input-polyfill": "^1.0.10",
@@ -50,20 +51,20 @@
   "devDependencies": {
     "@angular-builders/jest": "^9.0.1",
     "@angular-devkit/build-angular": "^14.2.9",
-    "@angular-eslint/builder": "14.1.2",
-    "@angular-eslint/eslint-plugin": "14.1.2",
-    "@angular-eslint/eslint-plugin-template": "14.1.2",
-    "@angular-eslint/schematics": "14.1.2",
-    "@angular-eslint/template-parser": "14.1.2",
+    "@angular-eslint/builder": "14.0.0-alpha.4",
+    "@angular-eslint/eslint-plugin": "14.0.0-alpha.4",
+    "@angular-eslint/eslint-plugin-template": "14.0.0-alpha.4",
+    "@angular-eslint/schematics": "14.0.0-alpha.4",
+    "@angular-eslint/template-parser": "14.0.0-alpha.4",
     "@angular/cli": "^14.2.9",
     "@angular/compiler-cli": "^14.2.10",
     "@angular/language-service": "^14.2.10",
     "@types/jest": "^26.0.23",
     "@types/node": "^13.13.51",
-    "@typescript-eslint/eslint-plugin": "5.27.1",
-    "@typescript-eslint/parser": "5.27.1",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
     "browserslist-useragent-regexp": "^3.0.0",
-    "eslint": "^8.17.0",
+    "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^4.3.8",
