--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/jest": "^9.0.1",
+    "@angular-builders/jest": "^14.0.2",
     "@angular-devkit/build-angular": "^14.2.9",
     "@angular-eslint/builder": "14.0.0-alpha.4",
     "@angular-eslint/eslint-plugin": "14.0.0-alpha.4",
@@ -68,7 +68,8 @@
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^4.3.8",
-    "jest": "^26.6.3",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^29.3.1",
     "jest-sonar-reporter": "^2.0.0",
     "prettier": "^2.3.1",
     "ts-node": "^8.10.2",
