--- a/package.json
+++ b/package.json
@@ -39,40 +39,40 @@
     "@angular/router": "^14.2.10",
     "@ngx-translate/core": "^14.0.0",
     "@oblique/oblique": "^9.3.0",
-    "@popperjs/core": "^2.9.2",
+    "@popperjs/core": "^2.11.6",
     "angular-auth-oidc-client": "^14.1.5",
-    "core-js": "^3.26.0",
+    "core-js": "^3.26.1",
     "moment": "^2.29.1",
     "rxjs": "~7.5.7",
     "time-input-polyfill": "^1.0.10",
-    "tslib": "^2.3.1",
+    "tslib": "^2.4.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-builders/jest": "^14.0.2",
     "@angular-devkit/build-angular": "^14.2.9",
-    "@angular-eslint/builder": "14.0.0-alpha.4",
-    "@angular-eslint/eslint-plugin": "14.0.0-alpha.4",
-    "@angular-eslint/eslint-plugin-template": "14.0.0-alpha.4",
-    "@angular-eslint/schematics": "14.0.0-alpha.4",
-    "@angular-eslint/template-parser": "14.0.0-alpha.4",
+    "@angular-eslint/builder": "^14.2.0",
+    "@angular-eslint/eslint-plugin": "^14.2.0",
+    "@angular-eslint/eslint-plugin-template": "^14.2.0",
+    "@angular-eslint/schematics": "^14.2.0",
+    "@angular-eslint/template-parser": "^14.2.0",
     "@angular/cli": "^14.2.9",
     "@angular/compiler-cli": "^14.2.10",
     "@angular/language-service": "^14.2.10",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^13.13.51",
-    "@typescript-eslint/eslint-plugin": "5.29.0",
-    "@typescript-eslint/parser": "5.29.0",
-    "browserslist-useragent-regexp": "^3.0.0",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "browserslist-useragent-regexp": "^4.0.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^4.3.8",
+    "husky": "^8.0.2",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.3.1",
     "jest-sonar-reporter": "^2.0.0",
     "prettier": "^2.3.1",
-    "ts-node": "^8.10.2",
+    "ts-node": "^10.9.1",
     "typescript": "~4.6.4"
   }
 }
