--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,5 +30,5 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - run: npm ci
             - run: npm run lint
-            - run: npm run test -- --prod
-            - run: npm run build -- --prod
+            - run: npm run test -- --configuration production
+            - run: npm run build -- --configuration production
